--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,9 @@
     <Analyzer Include="C:\Users\jeffan\Documents\AR\Unity\Hub\Editor\6000.0.25f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Nextandbac.cs" />
+    <Compile Include="Assets\profile3.cs" />
+    <Compile Include="Assets\profile2.cs" />
     <Compile Include="Assets\Kembali.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\main_menu.cs" />
